lab-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flightctl
  namespace: flightctl
spec:
  rules:
  - host: flightctl.ui
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: flightctl-ui
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  rules:
  - host: kubevirt.ui
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: kubevirt-manager
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
  - host: tekton.ui
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
  - host: tekton.ui
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
